# aragorn

./: Cargo.toml  Dockerfile  README.md  cert.pem  commit-check.sh  dump.rdb  key.pem  notes.txt  redis.conf
.github/workflows/: rust.yml
src/: build.rs  live_packet_reader.rs  main.rs  redis.rs  tls_reader.rs  tun.rs
src/ebpf/: ssl_write.c
src/plugin/: mod.rs
src/plugin/redis/: handler.rs  mod.rs  resp_parser.rs
src/plugin/tlsdecrypt/: cache.rs  mod.rs
src/post_processor/: mod.rs
src/post_processor/prometheus/: mod.rs
src/probes/: mod.rs  ssl_write_probe.rs
