[package]
name = "ranger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
tun = { version = "0.6.1", features = ["async"] }
openssl = "0.10"
tokio-openssl = "0.6"
pnet = "0.27"
log = "0.4.16"
clap = { version = "4.5.11", features = ["derive"] }
env_logger = "0.11.5"
anyhow = "1.0.86"

