[package]
name = "ranger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
pnet = "0.35"
etherparse = "0.14.3"
nom = "7.1"
openssl = "0.10"
tokio-openssl = "0.6"
log = "0.4.16"
clap = { version = "4.5.11", features = ["derive"] }
env_logger = "0.11.5"
anyhow = "1.0.86"

[dev-dependencies]
mockall = "0.13"
