[package]
name = "aragorn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
pnet = "0.35"
nom = "7.1"
openssl = "0.10"
tokio-openssl = "0.6"
clap = { version = "4.5.11", features = ["derive"] }
anyhow = "1.0.86"
prometheus = "0.13.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
lazy_static = "^1.4"
async-trait = "0.1.81"

[dev-dependencies]
mockall = "0.13"
